--- a/src/index.njk
+++ b/src/index.njk
@@ -52,20 +52,20 @@ roughjs: true
     {% include "partials/work-list.njk" %}
 
 
-    <h2>Dream Jobs</h2>
+    <h2>Marketing Skills</h2>
     <div class="dream-job aligned flex items-start mt-6 p-6 bg-gray-900 rounded-lg border-dashed border-gray-600 border sm:block">
         <div class="mr-8">
-            <h3>Climate Change</h3>
+            <h3>Paid Demand Gen</h3>
             <p>I believe climate change is the single biggest problem mankind faces today. I’m practically a single-issue voter. Someday I’d love to apply the skills I’ve accrued over the last ~20 years in the climate tech space. I believe mankind can work out its differences, but only if it’s around to do so.</p>
         </div>
         <img src="/assets/img/values/spot-climate.svg" alt="" width="125" class="sm:mt-6">
     </div>
     <div class="dream-job aligned flex items-start mt-6 p-6 bg-gray-900 rounded-lg border-dashed border-gray-600 border sm:block">
         <div class="mr-8">
-            <h3>Email platform</h3>
-            <p>I’ve been designing and coding HTML emails since 2007, both professionally and <a href="https://www.cerberusemail.com/">as a hobby</a>. Someday I’d love to combine my passion for building emails with my skill as a product designer.</p>
+            <h3>Organic Demand Gen</h3>
+            <p>I’ve been doing Demand Gen with Paid Media Ads like Linkedin Ads, Google Adwords, Facebook Ads, Twitter Ads, & programmatic Ads both professionally and <a href="https://rakshitsoral.com/work">as a freelancer</a>. </p>
         </div>
-        <img src="/assets/img/values/spot-email.svg" alt="" width="125" class="sm:mt-6">
+        <img src="/assets/img/SEO icon.png" alt="SEO icon" width="125" class="sm:mt-6">
     </div>
     <section class="work-section work-section--misc max-w-4xl p-16 mt-24 flex items-start self-center relative sm:p-8 sm:mt-12  sm:flex-col-reverse">
         <div>
