--- a/src/index.njk
+++ b/src/index.njk
@@ -55,15 +55,15 @@ roughjs: true
     <h2>Marketing Skills</h2>
     <div class="dream-job aligned flex items-start mt-6 p-6 bg-gray-900 rounded-lg border-dashed border-gray-600 border sm:block">
         <div class="mr-8">
-            <h3>Paid Demand Gen</h3>
-            <p>I believe climate change is the single biggest problem mankind faces today. I’m practically a single-issue voter. Someday I’d love to apply the skills I’ve accrued over the last ~20 years in the climate tech space. I believe mankind can work out its differences, but only if it’s around to do so.</p>
+            <h3>Paid Demand Gen</h3><br>
+             <p>I’ve been doing Demand Gen with Paid Media Ads like Linkedin Ads, Google Adwords, Facebook Ads, Twitter Ads, & programmatic Ads both professionally and <a href="https://rakshitsoral.com/work">as a freelancer</a>. </p>
         </div>
-        <img src="/assets/img/values/spot-climate.svg" alt="" width="125" class="sm:mt-6">
+        <img src="/assets/img/ADS icon.png" alt="Paid Ads" width="125" class="sm:mt-6">
     </div>
     <div class="dream-job aligned flex items-start mt-6 p-6 bg-gray-900 rounded-lg border-dashed border-gray-600 border sm:block">
         <div class="mr-8">
-            <h3>Organic Demand Gen</h3>
-            <p>I’ve been doing Demand Gen with Paid Media Ads like Linkedin Ads, Google Adwords, Facebook Ads, Twitter Ads, & programmatic Ads both professionally and <a href="https://rakshitsoral.com/work">as a freelancer</a>. </p>
+            <h3>Organic Demand Gen</h3><br>
+            <p>I also do Organic Product Led SEO and Content-based Demand Gen. I do LLM SEO, backinking, PR outreach, influencer outreach and technical SEO with ease. </p>
         </div>
         <img src="/assets/img/SEO icon.png" alt="SEO icon" width="125" class="sm:mt-6">
     </div>
