--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -1,97 +1,174 @@
 {%- set metaTitle -%}
-    {%- if not title -%}{{ site.title }} - {{ site.description | safe }}
-    {%- else -%}{{ title | safe }} | {{ site.title }}
-    {%- endif -%}
+  {%- if not title -%}
+    {{ site.title }} - {{ site.description | safe }}
+  {%- else -%}
+    {{ title | safe }} | {{ site.title }}
+  {%- endif -%}
 {%- endset -%}
+
 {%- set metaDesc -%}
-    {%- if not description -%}{{ site.description | safe }}
-    {%- else -%}{{ description | safe }}
-    {%- endif -%}
+  {%- if not description -%}
+    {{ site.description | safe }}
+  {%- else -%}
+    {{ description | safe }}
+  {%- endif -%}
 {%- endset -%}
+
 <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>{{ metaTitle }}</title>
-        <meta name="title" content="{{ metaTitle }}">
-        <meta name="description" content="{{ metaDesc }}">
-        <meta name="author" content="{{ author.name }}">
-        <meta name="robots" content="index, follow">
-        <meta name="google-site-verification" content="QKAutzM76pfG_N6d0B9tZu8dRRWwCp6IRUQInWLzITI" />
-        <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
-        <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.ico' | url }}">
-        <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
-        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="{{ '/assets/css/styles.css' | url }}">
-        <script>
-    !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){function g(t,e){var o=e.split(".");2==o.length&&(t=t[o[0]],e=o[1]),t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}(p=t.createElement("script")).type="text/javascript",p.crossOrigin="anonymous",p.async=!0,p.src=s.api_host.replace(".i.posthog.com","-assets.i.posthog.com")+"/static/array.js",(r=t.getElementsByTagName("script")[0]).parentNode.insertBefore(p,r);var u=e;for(void 0!==a?u=e[a]=[]:a="posthog",u.people=u.people||[],u.toString=function(t){var e="posthog";return"posthog"!==a&&(e+="."+a),t||(e+=" (stub)"),e},u.people.toString=function(){return u.toString(1)+".people (stub)"},o="init Re Os As Pe Ms Fs capture Ve calculateEventProperties js register register_once register_for_session unregister unregister_for_session qs getFeatureFlag getFeatureFlagPayload isFeatureEnabled reloadFeatureFlags updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures on onFeatureFlags onSurveysLoaded onSessionId getSurveys getActiveMatchingSurveys renderSurvey canRenderSurvey canRenderSurveyAsync identify setPersonProperties group resetGroups setPersonPropertiesForFlags resetPersonPropertiesForFlags setGroupPropertiesForFlags resetGroupPropertiesForFlags reset get_distinct_id getGroups get_session_id get_session_replay_url alias set_config startSessionRecording stopSessionRecording sessionRecordingStarted captureException loadToolbar get_property getSessionProperty zs Ls createPersonProfile Us Rs Bs opt_in_capturing opt_out_capturing has_opted_in_capturing has_opted_out_capturing clear_opt_in_out_capturing Ds debug I Ns getPageViewId captureTraceFeedback captureTraceMetric".split(" "),n=0;n<o.length;n++)g(u,o[n]);e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
-    posthog.init('phc_SXBru49ErnNtyr5Ty59X5s5utxaLPKIVbGiY5f63atS', {
-        api_host: 'https://us.i.posthog.com',
-        defaults: '2025-05-24',
-        person_profiles: 'identified_only', // or 'always' to create profiles for anonymous users as well
-    })
-</script>
-    </head>	
-    <body {% if body_class %}id="{{ body_class }}" {% endif %}class="flex flex-col h-screen bg-sitebg text-gray-100 text-base font-sans break-words">
-        <div class="max-w-5xl w-full mx-auto px-2 flex-grow">
-            {% include "partials/header.njk" %}
-            <main>
-                {% if layout === "post" %}
-                {{ content | safe }}
-                {% else %}
-                {{ content | safe }}
-                {% endif %}
-            </main>
-            {% include "partials/footer.njk" %}
-        </div>
-        <script src="{{ '/assets/js/bundle.js' | url }}"></script>
-        {% if highlightjs %}
-        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
-        <script>hljs.initHighlightingOnLoad();</script>
-        {% endif %}
-        {% if roughjs %}
-        <script src="https://unpkg.com/rough-notation/lib/rough-notation.iife.js"></script>
-        <script>
-        setTimeout(function () {
-            const annotate = RoughNotation.annotate;
-            const annotationGroup = RoughNotation.annotationGroup;
-            const $ = (t) => document.querySelector(t);
-            {
-                const a1 = annotate($('.box-blue'), { type: 'box', color: '#3BC9DB', animationDuration: 500 });
-                const a2 = annotate($('.box-green'), { type: 'box', color: '#059669', animationDuration: 500 });
-                const a3 = annotate($('.box-red'), { type: 'box', color: '#B91C1C', animationDuration: 500 });
-                const a4 = annotate($('.underline-gray'), { type: 'underline', color: '#475569', animationDuration: 500, iterations: 2 });
-                const a5 = annotate($('.underline-gray2'), { type: 'underline', color: '#475569', animationDuration: 500, iterations: 2 });
-                const ag = annotationGroup([a1, a2, a3, a4, a5]);
-                ag.show();
-            }
-        }, 500)();
-        </script>
-        {% endif %}
-         <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
-        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <title>{{ metaTitle }}</title>
+    <meta name="title" content="{{ metaTitle }}">
+    <meta name="description" content="{{ metaDesc }}">
+    <meta name="author" content="{{ author.name }}">
+    <meta name="robots" content="index, follow">
 
+    <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
+    <link rel="shortcut icon" type="image/png" href="{{ '/assets/img/favicon.ico' | url }}">
+    <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
 
-        <script>
-  if (window.netlifyIdentity) {
-    window.netlifyIdentity.on("init", user => {
-      if (!user) {
-        window.netlifyIdentity.on("login", () => {
-          document.location.href = "/admin/";
-        });
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="{{ '/assets/css/styles.css' | url }}">
+
+    <!-- PostHog -->
+    <script>
+      !function(t,e){var o,n,p,r;e.__SV||(window.posthog=e,e._i=[],e.init=function(i,s,a){
+      function g(t,e){var o=e.split('.');2==o.length&&(t=t[o[0]],e=o[1]),
+      t[e]=function(){t.push([e].concat(Array.prototype.slice.call(arguments,0)))}}
+      (p=t.createElement('script')).type='text/javascript',p.async=!0,
+      p.src=s.api_host.replace('.i.posthog.com','-assets.i.posthog.com')+'/static/array.js',
+      (r=t.getElementsByTagName('script')[0]).parentNode.insertBefore(p,r);
+      var u=e;for(void 0!==a?u=e[a]=[]:a='posthog',
+      u.people=u.people||[],u.toString=function(t){
+      var e='posthog';return'posthog'!==a&&(e+='.'+a),t||(e+=' (stub)'),e},
+      u.people.toString=function(){return u.toString(1)+'.people (stub)'},
+      o='capture identify alias people.set'.split(' '),n=0;n<o.length;n++)g(u,o[n]);
+      e._i.push([i,s,a])},e.__SV=1)}(document,window.posthog||[]);
+      posthog.init('phc_SXBru49ErnNtyr5Ty59X5s5utxaLPKIVbGiY5f63atS',{
+        api_host:'https://us.i.posthog.com',
+        person_profiles:'identified_only'
+      });
+    </script>
+  </head>
+
+  <body
+    {% if body_class %}id="{{ body_class }}"{% endif %}
+    class="flex flex-col min-h-screen bg-sitebg text-gray-100 text-base font-sans break-words"
+  >
+
+    <!-- Top anchor -->
+    <div id="top"></div>
+
+    <!-- Page wrapper -->
+    <div class="max-w-5xl w-full mx-auto px-2 flex-grow">
+      {% include "partials/header.njk" %}
+
+      <main>
+        {{ content | safe }}
+      </main>
+
+      {% include "partials/footer.njk" %}
+    </div>
+
+   <!-- Back to Top Button -->
+<button id="backToTop"
+  style="
+    position: fixed;
+    bottom: 1.5rem;
+    right: 1.5rem;
+    width: 48px;
+    height: 48px;
+    border-radius: 9999px;
+    border: none;
+    background: #2563eb;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.3s ease, transform 0.3s ease;
+    z-index: 1000;
+  "
+  aria-label="Back to top">
+  ↑
+</button>
+
+<script>
+  (function () {
+    const btn = document.getElementById("backToTop");
+
+    window.addEventListener("scroll", function () {
+      if (window.scrollY > 300) {
+        btn.style.opacity = "1";
+        btn.style.pointerEvents = "auto";
+        btn.style.transform = "translateY(0)";
+      } else {
+        btn.style.opacity = "0";
+        btn.style.pointerEvents = "none";
+        btn.style.transform = "translateY(10px)";
       }
     });
-  }
+
+    btn.addEventListener("click", function () {
+      window.scrollTo({
+        top: 0,
+        behavior: "smooth"
+      });
+    });
+  })();
 </script>
-<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-        <script async defer src="https://scripts.withcabin.com/hello.js"></script>
-    </body>
+
+
+    <!-- Scripts -->
+    <script src="{{ '/assets/js/bundle.js' | url }}"></script>
+
+    {% if highlightjs %}
+      <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
+      <script>hljs.initHighlightingOnLoad();</script>
+    {% endif %}
+
+    {% if roughjs %}
+      <script src="https://unpkg.com/rough-notation/lib/rough-notation.iife.js"></script>
+      <script>
+        setTimeout(() => {
+          const a = RoughNotation.annotate;
+          RoughNotation.annotationGroup([
+            a(document.querySelector('.box-blue'), { type:'box', color:'#3BC9DB' }),
+            a(document.querySelector('.box-green'), { type:'box', color:'#059669' }),
+            a(document.querySelector('.box-red'), { type:'box', color:'#B91C1C' })
+          ]).show();
+        }, 500);
+      </script>
+    {% endif %}
+
+    <!-- Analytics -->
+    <script data-host="https://microanalytics.io" src="https://microanalytics.io/js/script.js" async defer></script>
+
+    <!-- Netlify Identity -->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
+
+    <!-- Cabin Analytics -->
+    <script async defer src="https://scripts.withcabin.com/hello.js"></script>
+
+  </body>
 </html>
