--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -14,6 +14,9 @@
   {%- endif -%}
 {%- endset -%}
 
+<!-- Example in your layout file -->
+<h1 data-sb-field-path="title">{{ title }}</h1>
+<div data-sb-field-path="content">{{ content | safe }}</div>
 <!DOCTYPE html>
 <html lang="en">
   <head>
