--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-
+<!-- Example in your layout file -->
+<h1 data-sb-field-path="title">{{ title }}</h1>
+<div data-sb-field-path="content">{{ content | safe }}</div>
 <article class="flex flex-col items-center">
     {% if featured_image %}
     <img src="{{ featured_image | url }}" loading="lazy" alt=""{% if featured_image_classes %} class="{{ featured_image_classes }}"{% endif %}>
