--- a/src/resume.njk
+++ b/src/resume.njk
@@ -433,11 +433,12 @@ clone.style.breakInside = "avoid-page";
         });
         html2pdf()
           .set({
-            margin: [10, 10, 10, 10],
+              margin: [0, 0, 0, 0],
             filename: 'Rakshit_Soral_Marketing_CV.pdf',
             image: { type: 'jpeg', quality: 0.98 },
             html2canvas: { scale: 2, letterRendering: true, logging: false },
             jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+             pagebreak: { mode: ['avoid-all', 'css', 'legacy'] },
           })
           .from(pdfContainer)
           .save();
